--- a/Req.html
+++ b/Req.html
@@ -11,10 +11,10 @@
 <header>
 	<div id="headbg">
 		<div id="head">
-			<div id="logoh"><a href="index"><img src="Logo Web.png" width="160" height="40" alt=""/></a></div>
-			<div class="botonh"><a href="index">INICIO</a></div>
-			<div class="botonh"><a href="req">REQUISITOS</a></div>		
-			<div class="botonh"><a href="cred">CRÉDITO</a></div>
+			<div id="logoh"><a href="index.html"><img src="Logo Web.png" width="160" height="40" alt=""/></a></div>
+			<div class="botonh"><a href="index.html">INICIO</a></div>
+			<div class="botonh"><a href="Req.html">REQUISITOS</a></div>		
+			<div class="botonh"><a href="Cred.html">CRÉDITO</a></div>
 		</div>
 	</div>
 </header>
@@ -98,7 +98,7 @@
 <footer>
 	<div id="credbg">
 		<div id="cred">
-			<div id="logocr"><a href="index"><img src="Logo Web Cred.png" width="150" height="38" alt=""/></a></div>
+			<div id="logocr"><a href="index.html"><img src="Logo Web Cred.png" width="150" height="38" alt=""/></a></div>
 			<div id="logodd"><a href="http://instagram.com/drmzdaniel"><img src="Logo Web Cred DD.png" width="75" height="75" alt=""/></a></div>
 			<div id="tder"><p2>dermerc - Daniel Durón<br><strong>Todos los Derechos Reservados</strong> <br>2019 - Saltillo, Coah. Mex.</p2></div>
 		</div>	
