--- a/cred.html
+++ b/cred.html
@@ -13,8 +13,8 @@
 		<div id="head">
 			<div id="logoh"><a href="index.html"><img src="Logo Web.png" width="160" height="40" alt=""/></a></div>
 			<div class="botonh"><a href="index.html">INICIO</a></div>
-			<div class="botonh"><a href="Req.html">REQUISITOS</a></div>		
-			<div class="botonh"><a href="Cred.html">CRÉDITO</a></div>
+			<div class="botonh"><a href="req.html">REQUISITOS</a></div>		
+			<div class="botonh"><a href="cred.html">CRÉDITO</a></div>
 		</div>
 	</div>
 </header>
